--- a/GradientBoostingRegressor.ipynb
+++ b/GradientBoostingRegressor.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ee29b8c1",
+   "id": "cc71cd98",
    "metadata": {},
    "source": [
-    "## AdaBoosting, Gradientboosting, XGBoosting Regressor : "
+    "## Gradientboosting regressor : "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a1791c2f",
+   "id": "4886a142",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "294c2b80",
+   "id": "a92fbf9f",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3ace60a4",
+   "id": "e2e5b7c1",
    "metadata": {},
    "outputs": [
     {
@@ -184,8 +184,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "de5fa669",
+   "execution_count": 5,
+   "id": "d4d6599d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a9b4b440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,8 +215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7f9ae24b",
+   "execution_count": 7,
+   "id": "2bbac287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,31 +225,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "033ad3f0",
+   "id": "2b08db29",
    "metadata": {},
    "source": [
-    "### Train test split and OrdinalEncoder : "
+    "### Train test split and Ordinalencoder : "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "403b6ebc",
+   "execution_count": 8,
+   "id": "092e6af8",
    "metadata": {},
    "outputs": [],
    "source": [
     "X=df.drop(\"Selling_Price\", axis=1)\n",
-    "y=df.Selling_Price"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "04dc55e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tree base modellerde get dummy ile değil ordinal encoder ile çalışırız : \n",
+    "y=df.Selling_Price\n",
+    "\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "\n",
     "cat = X.select_dtypes(\"object\").columns\n",
@@ -236,44 +248,45 @@
     "X[cat] = enc.fit_transform(X[cat])\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2, random_state=5)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "477c7222",
+   "id": "9b04bc0c",
    "metadata": {},
    "source": [
-    "### Default Modelling : "
+    "### Default Modeling : "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3a1f6c5e",
+   "execution_count": 9,
+   "id": "df923574",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AdaBoostRegressor(random_state=101)"
+       "GradientBoostingRegressor(random_state=101)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.ensemble import AdaBoostRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
-    "ada_model = AdaBoostRegressor(random_state=101)\n",
-    "ada_model.fit(X_train, y_train)"
+    "gr_model = GradientBoostingRegressor(random_state = 101)\n",
+    "gr_model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "be23b906",
+   "id": "a433fde8",
    "metadata": {},
    "source": [
     "### Metrics : "
@@ -281,13 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ca63c86e",
+   "execution_count": 10,
+   "id": "29f2d608",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
-    "\n",
     "def train_val(model, X_train, y_train, X_test, y_test):\n",
     "    \n",
     "    y_pred = model.predict(X_test)\n",
@@ -308,8 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d43783d6",
+   "execution_count": 11,
+   "id": "668f5ed1",
    "metadata": {},
    "outputs": [
     {
@@ -340,23 +352,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>R2</th>\n",
-       "      <td>0.967360</td>\n",
-       "      <td>0.938860</td>\n",
+       "      <td>0.996501</td>\n",
+       "      <td>0.970278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mae</th>\n",
-       "      <td>0.730070</td>\n",
-       "      <td>0.920171</td>\n",
+       "      <td>0.217741</td>\n",
+       "      <td>0.533569</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mse</th>\n",
-       "      <td>0.830186</td>\n",
-       "      <td>1.641058</td>\n",
+       "      <td>0.088991</td>\n",
+       "      <td>0.797770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rmse</th>\n",
-       "      <td>0.911145</td>\n",
-       "      <td>1.281038</td>\n",
+       "      <td>0.298314</td>\n",
+       "      <td>0.893180</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -364,50 +376,42 @@
       ],
       "text/plain": [
        "         train      test\n",
-       "R2    0.967360  0.938860\n",
-       "mae   0.730070  0.920171\n",
-       "mse   0.830186  1.641058\n",
-       "rmse  0.911145  1.281038"
+       "R2    0.996501  0.970278\n",
+       "mae   0.217741  0.533569\n",
+       "mse   0.088991  0.797770\n",
+       "rmse  0.298314  0.893180"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_val(ada_model, X_train, y_train, X_test, y_test)"
+    "train_val(gr_model, X_train, y_train, X_test, y_test)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2aa18707",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "1cc5662b",
+   "id": "bd54cf58",
    "metadata": {},
    "source": [
-    "### Cross Validate Control : "
+    "### Cross Validate : "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0c84ff93",
+   "id": "36491679",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "test_r2                             0.835971\n",
-       "test_neg_mean_absolute_error       -1.116024\n",
-       "test_neg_mean_squared_error        -4.898089\n",
-       "test_neg_root_mean_squared_error   -1.892615\n",
+       "test_r2                             0.890442\n",
+       "test_neg_mean_absolute_error       -0.751150\n",
+       "test_neg_mean_squared_error        -3.348033\n",
+       "test_neg_root_mean_squared_error   -1.552812\n",
        "dtype: float64"
       ]
      },
@@ -419,7 +423,7 @@
    "source": [
     "from sklearn.model_selection import cross_validate\n",
     "\n",
-    "model = AdaBoostRegressor(random_state=101)\n",
+    "model = GradientBoostingRegressor(random_state=101)\n",
     "scores = cross_validate(model, X_train, y_train, scoring=['r2', \n",
     "            'neg_mean_absolute_error','neg_mean_squared_error','neg_root_mean_squared_error'], cv =10)\n",
     "pd.DataFrame(scores)\n",
@@ -428,26 +432,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330ff096",
+   "id": "0274ce9f",
    "metadata": {},
    "source": [
-    "### Gridsearch for Adaboosting :"
+    "### Gradient Boosting Regressor : "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6328b164",
+   "id": "c42f7631",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'base_estimator': None,\n",
-       " 'learning_rate': 1.0,\n",
-       " 'loss': 'linear',\n",
-       " 'n_estimators': 50,\n",
-       " 'random_state': 101}"
+       "GridSearchCV(cv=10, estimator=GradientBoostingRegressor(random_state=101),\n",
+       "             n_jobs=-1,\n",
+       "             param_grid={'learning_rate': [0.001, 0.01, 0.1, 0.5],\n",
+       "                         'max_depth': [2, 3], 'max_features': [None, 2, 3, 4],\n",
+       "                         'n_estimators': [100, 200, 300],\n",
+       "                         'subsample': [0.8, 1]},\n",
+       "             scoring='neg_root_mean_squared_error')"
       ]
      },
      "execution_count": 14,
@@ -456,60 +462,12 @@
     }
    ],
    "source": [
-    "ada_model.get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "0ed5aa05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_estimators = np.array([50, 100,150,200,250,300,350,400,450,500])\n",
-    "learning_rate = np.linspace(0.01,1,100)\n",
-    "loss = [\"linear\", \"square\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f83e1cbe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=10, estimator=AdaBoostRegressor(random_state=101), n_jobs=-1,\n",
-       "             param_grid={'learning_rate': array([0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 , 0.11,\n",
-       "       0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.2 , 0.21, 0.22,\n",
-       "       0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.3 , 0.31, 0.32, 0.33,\n",
-       "       0.34, 0.35, 0.36, 0.37, 0.38, 0.39, 0.4 , 0.41, 0.42, 0.43, 0.44,\n",
-       "       0.45, 0.46, 0.47, 0.48, 0.49...\n",
-       "       0.56, 0.57, 0.58, 0.59, 0.6 , 0.61, 0.62, 0.63, 0.64, 0.65, 0.66,\n",
-       "       0.67, 0.68, 0.69, 0.7 , 0.71, 0.72, 0.73, 0.74, 0.75, 0.76, 0.77,\n",
-       "       0.78, 0.79, 0.8 , 0.81, 0.82, 0.83, 0.84, 0.85, 0.86, 0.87, 0.88,\n",
-       "       0.89, 0.9 , 0.91, 0.92, 0.93, 0.94, 0.95, 0.96, 0.97, 0.98, 0.99,\n",
-       "       1.  ]),\n",
-       "                         'loss': ['linear', 'square'],\n",
-       "                         'n_estimators': array([ 50, 100, 150, 200, 250, 300, 350, 400, 450, 500])},\n",
-       "             scoring='neg_root_mean_squared_error')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "param_grid = {\"n_estimators\":n_estimators,\n",
-    "              \"learning_rate\":learning_rate,\n",
-    "              \"loss\": loss\n",
-    "            }\n",
+    "param_grid = {\"n_estimators\":[100, 200, 300], \"subsample\":[0.8, 1], \"max_features\" : [None, 2, 3, 4],\n",
+    "            \"learning_rate\": [0.001, 0.01, 0.1, 0.5], 'max_depth':[2,3]}\n",
     "\n",
-    "model = AdaBoostRegressor(random_state=101)\n",
+    "model = GradientBoostingRegressor(random_state=101)\n",
     "\n",
     "grid_model = GridSearchCV(estimator=model,\n",
     "                          param_grid=param_grid,\n",
@@ -517,22 +475,26 @@
     "                          cv=10,\n",
     "                          n_jobs = -1)\n",
     "\n",
-    "grid_model.fit(X_train,y_train)\n"
+    "grid_model.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "cec0174e",
+   "execution_count": 15,
+   "id": "db00508b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'learning_rate': 0.7100000000000001, 'loss': 'linear', 'n_estimators': 150}"
+       "{'learning_rate': 0.1,\n",
+       " 'max_depth': 2,\n",
+       " 'max_features': 4,\n",
+       " 'n_estimators': 300,\n",
+       " 'subsample': 0.8}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,8 +505,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "df9e2701",
+   "execution_count": 16,
+   "id": "21a0227f",
    "metadata": {},
    "outputs": [
     {
@@ -575,37 +537,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>R2</th>\n",
-       "      <td>0.970821</td>\n",
-       "      <td>0.935613</td>\n",
+       "      <td>0.996280</td>\n",
+       "      <td>0.95419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mae</th>\n",
-       "      <td>0.729542</td>\n",
-       "      <td>1.001615</td>\n",
+       "      <td>0.228673</td>\n",
+       "      <td>0.58534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mse</th>\n",
-       "      <td>0.742142</td>\n",
-       "      <td>1.728203</td>\n",
+       "      <td>0.094620</td>\n",
+       "      <td>1.22957</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rmse</th>\n",
-       "      <td>0.861476</td>\n",
-       "      <td>1.314611</td>\n",
+       "      <td>0.307604</td>\n",
+       "      <td>1.10886</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         train      test\n",
-       "R2    0.970821  0.935613\n",
-       "mae   0.729542  1.001615\n",
-       "mse   0.742142  1.728203\n",
-       "rmse  0.861476  1.314611"
+       "         train     test\n",
+       "R2    0.996280  0.95419\n",
+       "mae   0.228673  0.58534\n",
+       "mse   0.094620  1.22957\n",
+       "rmse  0.307604  1.10886"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,8 +578,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "3ba092f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train</th>\n",
+       "      <th>test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>R2</th>\n",
+       "      <td>0.996501</td>\n",
+       "      <td>0.970278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mae</th>\n",
+       "      <td>0.217741</td>\n",
+       "      <td>0.533569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mse</th>\n",
+       "      <td>0.088991</td>\n",
+       "      <td>0.797770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rmse</th>\n",
+       "      <td>0.298314</td>\n",
+       "      <td>0.893180</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         train      test\n",
+       "R2    0.996501  0.970278\n",
+       "mae   0.217741  0.533569\n",
+       "mse   0.088991  0.797770\n",
+       "rmse  0.298314  0.893180"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_val(gr_model, X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b2dd07f1",
+   "id": "8f8b485a",
    "metadata": {},
    "outputs": [],
    "source": []
